# Haskell

./: .gitignore  Algorithms-hs.cabal  default.nix  flake.nix  treefmt.nix
.github/workflows/: build.yml
app/: Main.hs
nix/: list.nix
src/graph/: dijkstra.hs  floyd.hs  prim.hs
src/list/: p1.hs  p2.hs  p3.hs  p4.hs  p5.hs  p6.hs  p7.hs
src/sort/: bubblesort.hs  quicksort.hs
